--- a/game-of-15/src/components/GameRules.css
+++ b/game-of-15/src/components/GameRules.css
@@ -1,15 +1,12 @@
-/* components/GameRules.css */
 .GameRules {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  text-align: center;
 }
 
 .GameRules button {
   margin: 10px;
-  padding: 10px 20px;
   font-size: 18px;
-  cursor: pointer;
+}
+
+h1 {
+  font-size: 24px;
 }
