--- a/game-of-15/src/components/GameBoard.css
+++ b/game-of-15/src/components/GameBoard.css
@@ -40,7 +40,7 @@
 .GameGrid td {
   width: 60px;
   height: 60px;
-  border: 1px solid #ccc;
+  border: 5px solid #000;
   text-align: center;
   vertical-align: middle;
   font-size: 24px;
