--- a/game-of-15/src/components/StartScreen.css
+++ b/game-of-15/src/components/StartScreen.css
@@ -47,3 +47,35 @@
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.instructions-container {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-top: 20px;
+}
+
+.instructions,
+.game-modes {
+  flex: 1;
+  padding: 10px;
+  text-align: left;
+}
+
+.instructions {
+  margin-right: 20px;
+}
+
+li {
+  list-style-type: none;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+li span {
+  font-weight: normal;
+}
+
+.bold {
+  font-weight: bold;
+}
